launchpad-buildd (159) UNRELEASED; urgency=medium

  * Allow all snapd services in the policy-rc.d we install in LXD
    containers; for better or worse, snapd.postinst (via deb-systemd-invoke)
    won't start any of them, including snapd itself, if any of them is
    forbidden.  Mask snapd.refresh.timer so that it doesn't cause trouble.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 02 Feb 2018 16:14:46 +0000

launchpad-buildd (158) xenial; urgency=medium

  [ Steve Langasek ]
  * Support passing a snap channel into a livefs build through the
    environment.

  [ Christopher Glass ]
  * Add support for passing apt proxies to live-build.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 Jan 2018 10:04:42 +0000

launchpad-buildd (157) xenial; urgency=medium

  [ Colin Watson ]
  * Normalise Python packaging.  We now install our modules on the normal
    system path, using pybuild.  setup.py now installs buildd-slave.tac in
    the lpbuildd package rather than data_files in order not to pollute the
    top level of a virtualenv.
  * Fall back to the package name from AC_INIT when expanding $(PACKAGE) in
    translation configuration files if no other definition can be found.
  * Set SNAPCRAFT_BUILD_INFO=1 to tell snapcraft to generate a manifest.

  [ William Grant ]
  * Fix inclusion of buildd-slave.tac in MANIFEST.in.
  * Fix check-implicit-pointer-functions symlink for new python-lpbuildd path.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 29 Nov 2017 14:16:04 +0000

launchpad-buildd (156) xenial; urgency=medium

  * Remove useless cwd argument passed to subprocess.check_call from
    Chroot.run.
  * Replace shell_escape function with shlex.quote (Python 3) or pipes.quote
    (Python 2).
  * Fix handling of null/empty-domain case in generate_pots.
  * Make Backend.run(cwd=) work, and refactor BuildLiveFS and BuildSnap to
    use it.  This fixes translation templates builds, which were assuming
    that this worked.
  * Remove executable bit from